# unique_words_counter_test_task

./: CMakeLists.txt  FileDataProvider.cpp  FileDataProvider.h  main.cpp  readme.md
